--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 </head>
 
@@ -84,18 +84,6 @@
 	</ul>
   </div>
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -180,8 +168,8 @@
 <script type="text/javascript" src="./MainContainerAppViewModel.js"></script>
 <script type="text/javascript" src="./AppMgr.js"></script>
 <script type="text/javascript" src="./ParticipantMgr.js"></script>
-<script type="text/javascript" src="./Participant_TableView.js"></script>
-<script type="text/javascript" src="./UserStatus_view.js"></script>
+<script type="text/javascript" src="./Participant_TableMgr.js"></script>
+<script type="text/javascript" src="./UserStatus_VM.js"></script>
 
 
 
@@ -191,13 +179,12 @@
  var container_modelview = new ContainerMainAppViewModel();
  ko.applyBindings(container_modelview);
  var appmgr = new AppMgr();
-
+ appmgr.initialize();
 </script>
 
 
 
 <script type="text/javascript">
-
 	function change_column(){
 
 		var current_column = container_modelview.left_column_css_class();
