login status works

--- a/Main.html
+++ b/Main.html
@@ -223,6 +223,10 @@
 	}
 
 
+	function update_game_status(){
+		appmgr.update_game_status(5);
+	}
+
 </script>
 
 
@@ -235,6 +239,7 @@
 	<br>
 	<button onclick = "get_own_role_array()">get_own_role_array</button>
 	<br>
+	<button onclick = "update_game_status()">update_game_status</button>
 
 
 </body>
