--- a/Main.html
+++ b/Main.html
@@ -173,14 +173,35 @@
 <script type="text/javascript" src="./UserStatus_VM.js"></script>
 
 
-
+<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
 
 <script type="text/javascript">
 
  var container_modelview = new ContainerMainAppViewModel();
  ko.applyBindings(container_modelview);
  var appmgr = new AppMgr();
- appmgr.initialize();
+
+ var parse_app_id = "EWPPdrDVaAIqhRazWp8K0ZlmafAAPt93JiOAonvX";
+ var parse_js_key = "US6Lheio8PGcBdIpwGFhFSQVpi5GKunGf6hGq5Ze";
+ var debate_game_id = "pofBusvlin";
+
+ Parse.initialize(parse_app_id, parse_js_key);
+
+
+   Parse.Cloud.run('Cloud_GetHangoutGameData_debate', { game_id: debate_game_id},{
+    success: function(game_obj) {
+
+ 		appmgr.initialize(game_obj);
+
+    },
+    error: function(error) {
+      alert("something happen and creating event failed" + error.message);
+      //data should be vaidated before upload and the error should not happen in server side
+    }
+  });
+
+
+
 </script>
 
 
