works with hangout api

--- a/Main.html
+++ b/Main.html
@@ -173,7 +173,7 @@
 <script type="text/javascript" src="./UserStatus_VM.js"></script>
 
 
-<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+<script src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
 
 <script type="text/javascript">
 
@@ -183,14 +183,13 @@
 
  var parse_app_id = "EWPPdrDVaAIqhRazWp8K0ZlmafAAPt93JiOAonvX";
  var parse_js_key = "US6Lheio8PGcBdIpwGFhFSQVpi5GKunGf6hGq5Ze";
- var debate_game_id = "pofBusvlin";
+ var debate_game_id = "2o8fGURmhf";
 
  Parse.initialize(parse_app_id, parse_js_key);
 
 
    Parse.Cloud.run('Cloud_GetHangoutGameData_debate', { game_id: debate_game_id},{
     success: function(game_obj) {
-
  		appmgr.initialize(game_obj);
 
     },
