title update works

--- a/Main.html
+++ b/Main.html
@@ -212,18 +212,19 @@
 
 <script type="text/javascript">
 
- var container_modelview = new ContainerMainAppViewModel();
- ko.applyBindings(container_modelview);
- var appmgr = new AppMgr();
-
  var parse_app_id = "EWPPdrDVaAIqhRazWp8K0ZlmafAAPt93JiOAonvX";
  var parse_js_key = "US6Lheio8PGcBdIpwGFhFSQVpi5GKunGf6hGq5Ze";
- var debate_game_id = "EgHfnqNlbq";
-
  Parse.initialize(parse_app_id, parse_js_key);
 
+ var debate_game_id = "EgHfnqNlbq";
+ var own_parse_id = "tnsjqJOaJk";
 
-   Parse.Cloud.run('Cloud_GetHangoutGameData_debate', { game_id: debate_game_id},{
+ var container_modelview = new ContainerMainAppViewModel();
+ ko.applyBindings(container_modelview);
+ var appmgr = new AppMgr(debate_game_id, own_parse_id);
+
+
+  Parse.Cloud.run('Cloud_GetHangoutGameData_debate', { game_id: debate_game_id},{
     success: function(game_obj) {
  		appmgr.initialize(game_obj);
 
