--- a/Main.html
+++ b/Main.html
@@ -43,7 +43,7 @@
 <script type="text/html" id="user_status_template">
      <div data-bind="css: user_status_css">
         <img style="max-width:50px; float:left" data-bind="attr: {src: pict_src}">
-        <div style="float:right; line-height: 1px">
+        <div style="float:right;">
          <p data-bind ="text:role"></p>
          <p data-bind ="text:user_name"></p>
         </div>
