cancel join logic has been updated

--- a/Main.html
+++ b/Main.html
@@ -223,8 +223,8 @@
  Parse.initialize(parse_app_id, parse_js_key);
 
  var debate_game_id = "e62UzMTp2Y";
- var own_parse_id = "37mnmciaGV";
- var own_hangout_id = "hangout_XXX2";
+ var own_parse_id = "6ZMl4LGKim";
+ var own_hangout_id = "hangout_XXX4";
 
  var container_modelview = new ContainerMainAppViewModel();
  ko.applyBindings(container_modelview);
